# storaged

./: .gitignore  CMakeLists.txt  README.md
doc/: events.txt
etc/udev/rules.d/: 90-storaged.rules
etc/udev/scripts/: storage.sh
files/conf/: 90-storaged.rules.in
files/sysbus/: com.palm.storage.json.prv.in  com.palm.storage.json.pub.in  com.palm.storage.service.pub.in
scripts/public/: storage.sh.in
service/: com.palm.storage.json.prv  com.palm.storage.json.pub  com.palm.storage.service.prv  com.palm.storage.service.pub
src/: diskmode.c  diskmode.h  erase.c  erase.h  log.c  log.h  main.c  main.h  signals.c  signals.h  util.c  util.h
